[gd_scene load_steps=12 format=2]

[ext_resource path="res://plugins/basic_manufacturing/storage_pod_ghost.tscn" type="PackedScene" id=1]
[ext_resource path="res://plugins/worker_drone/drone.gd" type="Script" id=2]
[ext_resource path="res://plugins/basic_manufacturing/munitions_factory_ghost.tscn" type="PackedScene" id=3]
[ext_resource path="res://plugins/basic_manufacturing/refinery_ghost.tscn" type="PackedScene" id=4]
[ext_resource path="res://plugins/basic_manufacturing/roboport_ghost.tscn" type="PackedScene" id=5]
[ext_resource path="res://plugins/basic_manufacturing/spawn_platform_ghost.tscn" type="PackedScene" id=6]
[ext_resource path="res://plugins/basic_manufacturing/drill_ghost.tscn" type="PackedScene" id=7]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.2, 0.075, 0.25 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.025, 0.025, 0.375 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 0.45, 0.002, 0.012 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.406, 0.031, 0.406 )

[node name="Drone" type="KinematicBody"]
script = ExtResource( 2 )
unit_name = "worker"
ghosts = {
"Munition Factory": ExtResource( 3 ),
"Refinery": ExtResource( 4 ),
"Roboport": ExtResource( 5 ),
"Spawn Platform": ExtResource( 6 ),
"Storage Pod": ExtResource( 1 )
}
drill_ghost = ExtResource( 7 )

[node name="Body" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="ArmLF" type="MeshInstance" parent="."]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0.176776, 0, 0.176776 )
mesh = SubResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="Rotor" type="MeshInstance" parent="ArmLF"]
transform = Transform( 1, -2.38419e-07, 0, 2.38419e-07, 1, 0, 0, 0, 1, 0, 0.015, 0.175 )
mesh = SubResource( 3 )
material/0 = null

[node name="ArmRF" type="MeshInstance" parent="."]
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, -0.176776, 0, 0.176776 )
mesh = SubResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="Rotor" type="MeshInstance" parent="ArmRF"]
transform = Transform( -1, 1.50996e-07, 0, -1.50996e-07, -1, 0, 0, 0, 1, 0, 0.015, 0.175 )
mesh = SubResource( 3 )
material/0 = null

[node name="ArmLB" type="MeshInstance" parent="."]
transform = Transform( -0.707107, 0, 0.707106, 0, 1, 0, -0.707106, 0, -0.707107, 0.176777, 0, -0.176776 )
mesh = SubResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="Rotor" type="MeshInstance" parent="ArmLB"]
transform = Transform( -1, 1.50996e-07, 0, -1.50996e-07, -1, 7.10543e-15, 0, 7.10543e-15, 1, 0, 0.015, 0.175 )
mesh = SubResource( 3 )
material/0 = null

[node name="ArmRB" type="MeshInstance" parent="."]
transform = Transform( -0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, -0.176776, 0, -0.176776 )
mesh = SubResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="Rotor" type="MeshInstance" parent="ArmRB"]
transform = Transform( 1, -2.38419e-07, 0, 2.38419e-07, 1, 0, 0, 0, 1, 0, 0.015, 0.175 )
mesh = SubResource( 3 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 4 )

[node name="RayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -5, 0 )

[node name="MunitionMesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.119316, 0.0750224 )
